syntax = "proto3";

package coffeeshop;

option go_package = "github.com/wycliff-ochieng/proto-project/coffee_shop.proto";


service CoffeeShop{
    rpc GetMenu(MenuRequest) returns(stream Menu) {}
    rpc PlaceOrder(Order) returns(Receipt){}
    rpc GetOrderStatus(Receipt) returns(OrderStatus){}
}

message MenuRequest{}

message Receipt {
    repeated Items item = 1;
}

message Order{}

message Menu{
    repeated Items item = 1;
}

message OrderStatus{
    string order_id = 1;
    string status = 2;
}

message Items{
    string id = 1;
    string name= 2;
}